fix overflow for main

--- a/memory-card/src/index.css
+++ b/memory-card/src/index.css
@@ -12,10 +12,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   user-select: none;
-
-  /* max-width: 1920px; */
-  overflow: hidden;
-
 }
 
 a {
